# gdpyr

./: Makefile  pyproject.toml  scrapy.cfg
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.md  README.rst  TODO.rst
documents/cookies_policies/: airbnb.html  facebook.html  linkedin.html  stackoverflow.html  wikimedia.html
documents/privacy_policies/: airbnb.html  amazon.html  auvieuxcampeur.html  bluely.html  codingame.html  couchsurfing.html  coursera.html  edf.html  facebook.html  google.html  hardloop.html  homebox.html  kaggle.html  linkedin.html  medium.html  microsoft.html  mozilla.html  patreon.html  pivotal.html  pornhub.html  reddit.html  slack.html  soundcloud.html  stackoverflow.html  steam.html  trustpilot.html  twitter.html  uber.html  vporn.html  wikimedia.html  winamax.html  xhamster.html
documents/service_terms/: airbnb.html  auvieuxcampeur.html  bluely.html  coursera.html  github.html  google.html  hardloop.html  homebox.html  kaggle.html  linkedin.html  medium.html  microsoft.html  patreon.html  pornhub.html  redditinc.html  slack.html  stackoverflow.html  trustpilot.html  twitter.html  xhamster.html
documents/third_parties/: amazon.html  github.html  google.html  paypal.html  twitter.html
gdpyr/: __init__.py  __main__.py  _wrangling.py  cli.py  exporters.py  items.py  middlewares.py  pipelines.py  settings.py
gdpyr/spiders/: __init__.py  _legaldocuments.py  cookies_policies.py  privacy_policies.py  service_terms.py  third_parties.py
homespace/: settings.py
tests/: __init__.py  test_fuel.py  test_gdpyr.py
(+1 files in other folders)
