[tool.poetry]
name = "gdpyr"
version = "0.1.1"
description = "Monitor the legal commitments of data-processors :mag:"
license = "MIT"
authors = ["moodule <moodule@protonmail.com>"]
readme = ".github/README.rst"
repository = "https://github.com/moodule/gdpyr.git"
keywords = ["scraping", "scrapy-crawler", "privacy", "gdpr", "data protection"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "*"
nltk = "*"
scrapy = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
